--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ repository = "https://github.com/withoutboats/display_derive"
 version = "1.0.0"
 
 [dependencies]
-quote = "0.3.15"
-syn = "0.11.11"
-synstructure = "0.6.0"
+quote = "0.6"
+syn = "0.14"
+synstructure = "0.9"
+proc-macro2 = "0.4"
 
 [dev-dependencies.failure]
 version = "0.1.0"
